# TinyAIDriver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  work_notes.md
TinyFreeway/: CMakeLists.txt
TinyFreeway/src/: Simulation.h  TA_Brain.cpp  TA_Brain.h  TA_Chromo.h  TA_EvolutionEngine.h  TA_Math.h  TA_QuickThreadPool.h  TA_SimpleNN.h  TA_Tensor.h  TA_Train.h  TA_Trainer.h  TA_TrainingManager.h  main.cpp
